# QWED-AI_qwed-verification

./: .coderabbit.yaml  .coverage  .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v2.0.1.md  ROADMAP.md  SECURITY.md  SECURITY_REVIEW.md  action.yml  action_entrypoint.py  docker-compose.yml  entrypoint.sh  funding.json  mkdocs.yml  paper.bib  pyproject.toml  pytest.ini  requirements.in  requirements.txt  sonar-project.properties  test_qwed_local.py  unreadable_code_benchmark_20251224_180700.json  unreadable_code_benchmark_20251224_180840.json  unreadable_code_benchmark_20251224_181251.json
.buildkite/: pipeline.yml
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql.yml  deploy-docs.yml  docker-publish.yml  docs.yml  dogfood.yml  draft-pdf.yml  publish-sdks.yml  publish.yml  qwed-action-example.yml  sdk-tests.yml  snyk.yml  sonar.yml
benchmarks/: PERFORMANCE_REPORT.md  performance_profiler.py  performance_results_20260116_192531.json  performance_results_20260116_192609.json  performance_results_20260116_192729.json  unreadable_code_benchmark_20251224_174736.json  unreadable_code_benchmark_20251224_174840.json  unreadable_code_benchmark_20251224_175833.json
docs/: ARCHITECTURE.md  ASSURANCE_CASE.md  COMPARISON.md  COMPLIANCE_GUIDE.md  DESIGN.md  PII_MASKING.md  QWED_LOCAL.md  WHITEPAPER.md  contributing.md  index.md  process_determinism.md  security.md
docs-site/: docusaurus.config.ts  package.json  sidebars.ts
docs-site/docs/: intro.md
docs-site/docs/advanced/: agent-verification.md  architecture-diagrams.md  attestations.md  self-hosting.md
docs-site/docs/api/: authentication.md  endpoints.md  errors.md  rate-limits.md
docs-site/docs/engines/: code.md  consensus.md  (+8 more)
docs/getting-started/: installation.md  quickstart.md
docs/releases/: v1.1.0.md
examples/: README.md  demo_all_engines.py  qwed_local_example.py  stats_example.py
examples/moltbot/: vulnerable.py
examples/security_demo/: attack.py  vulnerable.py
qwed/guards/: attestation_guard.py  disclaimer_guard.py
qwed_sdk/: __init__.py  cli.py  client.py  pii_detector.py  qwed_local.py
qwed_sdk/guards/: __init__.py  exfiltration_guard.py  mcp_poison_guard.py  rag_guard.py
qwed_sdk/integrations/: __init__.py  crewai.py  llamaindex.py
research/: paper.md
scripts/: add_headers.py  prepare_opensource.py  seed_database.py  setup_and_verify.py
sdk-go/: README.md  go.mod  qwed.go  qwed_test.go
sdk-rust/: Cargo.toml  README.md
sdk-ts/: README.md  package-lock.json  package.json
sdk-ts/src/: client.ts  index.ts  types.ts
src/qwed_new/: __init__.py
tests/: test_api_exceptions.py  test_attestation_coverage.py  test_cli_cache.py  test_control_plane.py  test_error_handling.py  test_fact_verifier.py  test_graph_fact_verifier.py  test_integration_working.py  test_logic_exceptions.py  test_math_engine_extended.py  test_multi_tenancy.py  test_observability.py  test_phase17_guards.py  test_pii_masking.py  test_process_guard.py  test_qwed_local.py  test_qwed_local_coverage.py  test_redis_cache.py  test_redos_fixes.py  test_schema_verifier.py  test_sdk.py  test_secure_executor.py  test_secure_executor_coverage.py  test_security_fixes.py  test_sql_safety.py  test_symbolic_verifier.py  test_taint_analyzer.py
tests/advanced_audit/: run_complete_audit.py
tests/security/: test_injection.py
(+48 files in other folders)
